--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -179,48 +179,48 @@
                   </tr>
                   <tr>
                     <th scope="row">15</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Prasselnd - Kraechzend - Tosend / I + II Pizzicato</td>
+                    <td>I: spattering, jangling - cawing - roaring / I + II: Pizzicato</td>
                   </tr>
                   <tr>
                     <th scope="row">16</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Geraeusch ad lib.</td>
+                    <td>II: noise ad lib</td>
                   </tr>
                   <tr>
                     <th scope="row">17</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Laeutend - Saegend</td>
+                    <td>I: pealing, tolling - sawing</td>
                   </tr>
                   <tr>
                     <th scope="row">18</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Prellend - Knatternd (Ratternd)</td>
+                    <td>II: slapping, rebounding - chattering, flapping(clattering)</td>
                   </tr>
                   <tr>
                     <th scope="row">19</th>
-                    <td></td>
-                    <td></td>
+                    <td>I + II Tutti 157</td>
+                    <td>I + II: Tutti 157</td>
                   </tr>
                   <tr>
                     <th scope="row">20</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Raschelnd (Rattelnd) - Murmelnd</td>
+                    <td>I: crackling (rattling) - murmuring</td>
                   </tr>
                   <tr>
                     <th scope="row">21</th>
-                    <td>I Quakend</td>
-                    <td>I: croaking, quacking</td>
+                    <td>II Schnarrend</td>
+                    <td>II: twanging, rasping</td>
                   </tr>
                   <tr>
                     <th scope="row">22</th>
-                    <td></td>
-                    <td></td>
+                    <td>I X(Xi)</td>
+                    <td>I: X(Xi)</td>
                   </tr>
                   <tr>
                     <th scope="row">23</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Klaenge ad lib.</td>
+                    <td>II: pitched sounds ad lib</td>
                   </tr>
                   <tr>
                     <th scope="row">24</th>
