--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -224,13 +224,13 @@
                   </tr>
                   <tr>
                     <th scope="row">24</th>
-                    <td></td>
-                    <td></td>
+                    td>II 4 sec before the entry of moments 24, 25</td>
+                    <td>II: 4 sec before the entry of moments 24, 25</td>
                   </tr>
                   <tr>
                     <th scope="row">25</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Wischend - Brummend - Posaunend / II Schluerfend - Quietschend</td>
+                    <td>I: wiping, swishing - growling (low buzzing) - tromboning / II: shuffling, slurping - squeaking, squealing</td>
                   </tr>
                   <tr>
                     <th scope="row">26</th>
