--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -234,43 +234,43 @@
                   </tr>
                   <tr>
                     <th scope="row">26</th>
-                    <td></td>
-                    <td></td>
+                    <td>I + II Tutti pianissimo</td>
+                    <td>I + II: Tutti pianissimo</td>
                   </tr>
                   <tr>
                     <th scope="row">27</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Singend (II Streichtoene)</td>
+                    <td>I: singing (whining) (II: String tones)</td>
                   </tr>
                   <tr>
                     <th scope="row">28</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Klatschend - Heulend - Bellend</td>
+                    <td>II: clapping - howling - baying, barking</td>
                   </tr>
                   <tr>
                     <th scope="row">29</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Schwirrend - Knurrend</td>
+                    <td>I: whizzing, whirring - grumbling, snarling</td>
                   </tr>
                   <tr>
                     <th scope="row">30</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Piepsend - Knackend</td>
+                    <td>II: cheeping - cracking</td>
                   </tr>
                   <tr>
                     <th scope="row">31</th>
-                    <td>I Quakend</td>
-                    <td>I: croaking, quacking</td>
+                    <td>I Zupfend</td>
+                    <td>I: plucking</td>
                   </tr>
                   <tr>
                     <th scope="row">32</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Pfeifend - Floetend</td>
+                    <td>II: piping, whistling - fluting</td>
                   </tr>
                   <tr>
                     <th scope="row">33</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Trompetend - Bruellend / Silence at end 1'11''</td>
+                    <td>I: trumpeting - bellowing, bawling</td>
                   </tr>
                 </tbody>
                 </table>
