--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -224,7 +224,7 @@
                   </tr>
                   <tr>
                     <th scope="row">24</th>
-                    td>II 4 sec before the entry of moments 24, 25</td>
+                    <td>II 4 sec before the entry of moments 24, 25</td>
                     <td>II: 4 sec before the entry of moments 24, 25</td>
                   </tr>
                   <tr>
