--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -106,6 +106,13 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
               <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">German</th>
+                    <th scope="col">English</th>
+                  </tr>
+                </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
