--- a/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
@@ -133,7 +133,191 @@
         </div>
     </section>
 
-
+    <!-- Table-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Moment</th>
+                        <th scope="col">Voice Attitudes</th>
+                        <th scope="col">Time Windows</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Soprano 1 & 2: high solemn Levite chant, Bass 1 & 2: deep voiced speech</td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>S+B: normal speech rhythm whispered</td>
+                        <td>GESANG DER JÜNGLINGE</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>S: Levite chant becomes sexy, seductive, S: Like a baby to baroque invention to hoarse, B: drunken, belching, B: cool jazz/string bass to snobbish</td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>II Wirbelnd - Trommelnd - Knarrend</td>
+                        <td>II: whirling - drumming - grating</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>I Rassenlng - Aechzend - Donnernd</td>
+                        <td>I: clashing, clanking - groaning, creaking - thundering</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>I+II Tutti forte</td>
+                        <td>I+II: Tutti forte</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">7</th>
+                        <td>II Rauschend - Toenend - Tutend / I + II Glaesern Singend</td>
+                        <td>II: rushing, rustling - ringing, resounding - hooting / I + II: glassy singing (whining)</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>I Wispernd</td>
+                        <td>I: whispering</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">9</th>
+                        <td>II Berstend (Krachend)</td>
+                        <td>II: bursting (crashing)</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">10</th>
+                        <td>I Trillernd Knallend Gellend</td>
+                        <td>I: trilling, tinkling - banging, clanging - yelling</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">11</th>
+                        <td>I Collage</td>
+                        <td>I: Collage</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">12</th>
+                        <td>II Y (Ypsilon)</td>
+                        <td>II: Y (Ypsilon)</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">13</th>
+                        <td>I Zirpend - Schnarchend - Grunzend</td>
+                        <td>I: chirping - snorting, snoring - grunting</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">14</th>
+                        <td>II Rollend</td>
+                        <td>II: Rollend</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">15</th>
+                        <td>I Prasselnd - Kraechzend - Tosend / I + II Pizzicato</td>
+                        <td>I: spattering, jangling - cawing - roaring / I + II: Pizzicato</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">16</th>
+                        <td>II Geraeusch ad lib.</td>
+                        <td>II: noise ad lib</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">17</th>
+                        <td>I Laeutend - Saegend</td>
+                        <td>I: pealing, tolling - sawing</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">18</th>
+                        <td>II Prellend - Knatternd (Ratternd)</td>
+                        <td>II: slapping, rebounding - chattering, flapping(clattering)</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">19</th>
+                        <td>I + II Tutti 157</td>
+                        <td>I + II: Tutti 157</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">20</th>
+                        <td>I Raschelnd (Rattelnd) - Murmelnd</td>
+                        <td>I: crackling (rattling) - murmuring</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">21</th>
+                        <td>II Schnarrend</td>
+                        <td>II: twanging, rasping</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">22</th>
+                        <td>I X(Xi)</td>
+                        <td>I: X(Xi)</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">23</th>
+                        <td>II Klaenge ad lib.</td>
+                        <td>II: pitched sounds ad lib</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">24</th>
+                        <td>II 4 sec before the entry of moments 24, 25</td>
+                        <td>II: 4 sec before the entry of moments 24, 25</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">25</th>
+                        <td>I Wischend - Brummend - Posaunend / II Schluerfend - Quietschend</td>
+                        <td>I: wiping, swishing - growling (low buzzing) - tromboning / II: shuffling, slurping - squeaking, squealing</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">26</th>
+                        <td>I + II Tutti pianissimo</td>
+                        <td>I + II: Tutti pianissimo</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">27</th>
+                        <td>I Singend (II Streichtoene)</td>
+                        <td>I: singing (whining) (II: String tones)</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">28</th>
+                        <td>II Klatschend - Heulend - Bellend</td>
+                        <td>II: clapping - howling - baying, barking</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">29</th>
+                        <td>I Schwirrend - Knurrend</td>
+                        <td>I: whizzing, whirring - grumbling, snarling</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">30</th>
+                        <td>II Piepsend - Knackend</td>
+                        <td>II: cheeping - cracking</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">31</th>
+                        <td>I Zupfend</td>
+                        <td>I: plucking</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">32</th>
+                        <td>II Pfeifend - Floetend</td>
+                        <td>II: piping, whistling - fluting</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">33</th>
+                        <td>I Trompetend - Bruellend / Silence at end 1'11''</td>
+                        <td>I: trumpeting - bellowing, bawling</td>
+                      </tr>
+                    </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
