--- a/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
@@ -164,33 +164,33 @@
                       </tr>
                       <tr>
                         <th scope="row">4</th>
-                        <td>II Wirbelnd - Trommelnd - Knarrend</td>
-                        <td>II: whirling - drumming - grating</td>
+                        <td>S: old enraged crone, B: abusive to exhausted, B: Sicilian street hawker</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
-                        <td>I Rassenlng - Aechzend - Donnernd</td>
-                        <td>I: clashing, clanking - groaning, creaking - thundering</td>
+                        <td>S+B: whispered, vocal click</td>
+                        <td>CARRÉ</td>
                       </tr>
                       <tr>
                         <th scope="row">6</th>
-                        <td>I+II Tutti forte</td>
-                        <td>I+II: Tutti forte</td>
+                        <td>S: stammering, B: resigned</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">7</th>
-                        <td>II Rauschend - Toenend - Tutend / I + II Glaesern Singend</td>
-                        <td>II: rushing, rustling - ringing, resounding - hooting / I + II: glassy singing (whining)</td>
+                        <td>S: normal speech, B: irregular military commands</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">8</th>
-                        <td>I Wispernd</td>
-                        <td>I: whispering</td>
+                        <td>S+B: whispered short syllables</td>
+                        <td>MOMENTE</td>
                       </tr>
                       <tr>
                         <th scope="row">9</th>
-                        <td>II Berstend (Krachend)</td>
-                        <td>II: bursting (crashing)</td>
+                        <td>B: sleepy, yawning, B: nasal police officer</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">10</th>
