--- a/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
@@ -194,123 +194,123 @@
                       </tr>
                       <tr>
                         <th scope="row">10</th>
-                        <td>I Trillernd Knallend Gellend</td>
-                        <td>I: trilling, tinkling - banging, clanging - yelling</td>
+                        <td>S: anxious / short chords, B: whistling</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">11</th>
-                        <td>I Collage</td>
-                        <td>I: Collage</td>
+                        <td>S+B: whisper</td>
+                        <td>GESANG DER JÜNGLINGE</td>
                       </tr>
                       <tr>
                         <th scope="row">12</th>
-                        <td>II Y (Ypsilon)</td>
-                        <td>II: Y (Ypsilon)</td>
+                        <td>S: weeping, S: deep voice speech, B: clicks</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">13</th>
-                        <td>I Zirpend - Schnarchend - Grunzend</td>
-                        <td>I: chirping - snorting, snoring - grunting</td>
+                        <td>S: laughing, hum, B: operatic to suddenly cold</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">14</th>
-                        <td>II Rollend</td>
-                        <td>II: Rollend</td>
+                        <td>S: exhausted (gasping), B: calm as a judge</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">15</th>
-                        <td>I Prasselnd - Kraechzend - Tosend / I + II Pizzicato</td>
-                        <td>I: spattering, jangling - cawing - roaring / I + II: Pizzicato</td>
+                        <td>S: yelling to slightly tipsy, B: fast baroque</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">16</th>
-                        <td>II Geraeusch ad lib.</td>
-                        <td>II: noise ad lib</td>
+                        <td>S: single chords, S: birdlike, headtone, B: jazzy slow swing in falsetto / whistle</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">17</th>
-                        <td>I Laeutend - Saegend</td>
-                        <td>I: pealing, tolling - sawing</td>
+                        <td>S+B: whisper</td>
+                        <td>CARRÉ</td>
                       </tr>
                       <tr>
                         <th scope="row">18</th>
-                        <td>II Prellend - Knatternd (Ratternd)</td>
-                        <td>II: slapping, rebounding - chattering, flapping(clattering)</td>
+                        <td>S: solemn Levite chant, S: stammering, B: menacing to frightened</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">19</th>
-                        <td>I + II Tutti 157</td>
-                        <td>I + II: Tutti 157</td>
+                        <td>S+B: whispered</td>
+                        <td>MOMENTE</td>
                       </tr>
                       <tr>
                         <th scope="row">20</th>
-                        <td>I Raschelnd (Rattelnd) - Murmelnd</td>
-                        <td>I: crackling (rattling) - murmuring</td>
+                        <td>S+B: chord to whisper</td>
+                        <td>CARRÉ and GESANG DER JÜNGLINGE</td>
                       </tr>
                       <tr>
                         <th scope="row">21</th>
-                        <td>II Schnarrend</td>
-                        <td>II: twanging, rasping</td>
+                        <td>S: witch-like, B: lightly swinging, B: German crooner</td>
+                        <td>CARRÉ and GESANG DER JÜNGLINGE</td>
                       </tr>
                       <tr>
                         <th scope="row">22</th>
-                        <td>I X(Xi)</td>
-                        <td>I: X(Xi)</td>
+                        <td>S: dreamily, rocking a baby, S: demonic</td>
+                        <td>CARRÉ and GESANG DER JÜNGLINGE</td>
                       </tr>
                       <tr>
                         <th scope="row">23</th>
-                        <td>II Klaenge ad lib.</td>
-                        <td>II: pitched sounds ad lib</td>
+                        <td>S: giggle, S: fearful, B: whistle, B: hoarse call</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">24</th>
-                        <td>II 4 sec before the entry of moments 24, 25</td>
-                        <td>II: 4 sec before the entry of moments 24, 25</td>
+                        <td>S: chanting, becoming vamping at the mirror, B: typewriter clattering</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">25</th>
-                        <td>I Wischend - Brummend - Posaunend / II Schluerfend - Quietschend</td>
-                        <td>I: wiping, swishing - growling (low buzzing) - tromboning / II: shuffling, slurping - squeaking, squealing</td>
+                        <td>S: vamp at the mirror, B: "Louis Armstrong", B: typewriter clattering</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">26</th>
-                        <td>I + II Tutti pianissimo</td>
-                        <td>I + II: Tutti pianissimo</td>
+                        <td>S: "whirring", B: natural speech, B: absently</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">27</th>
-                        <td>I Singend (II Streichtoene)</td>
-                        <td>I: singing (whining) (II: String tones)</td>
+                        <td>S: quiet whistle, B: soft cursing, B: Don Cossack Choir</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">28</th>
-                        <td>II Klatschend - Heulend - Bellend</td>
-                        <td>II: clapping - howling - baying, barking</td>
+                        <td>S: asking uncertainly, B: calling out, B: Don Cossack Choir</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">29</th>
-                        <td>I Schwirrend - Knurrend</td>
-                        <td>I: whizzing, whirring - grumbling, snarling</td>
+                        <td>S: slow staccato chords ala coloratura soprano, S: boisterously cheerful, B: bebop jazz, B: organ sounds</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">30</th>
-                        <td>II Piepsend - Knackend</td>
-                        <td>II: cheeping - cracking</td>
+                        <td>S: deep voiced speech, B: falsetto, B: whistle</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">31</th>
-                        <td>I Zupfend</td>
-                        <td>I: plucking</td>
+                        <td>S: cheerful shouts to unhappy memories, S: suggestively, giggling, B: chant</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <th scope="row">32</th>
-                        <td>II Pfeifend - Floetend</td>
-                        <td>II: piping, whistling - fluting</td>
+                        <td>IS+B: whisper</td>
+                        <td>MOMENTE</td>
                       </tr>
                       <tr>
                         <th scope="row">33</th>
-                        <td>I Trompetend - Bruellend / Silence at end 1'11''</td>
-                        <td>I: trumpeting - bellowing, bawling</td>
+                        <td>S: headtone staccato chords, B: fast speech</td>
+                        <td></td>
                       </tr>
                     </tbody>
                     </table>
@@ -318,6 +318,21 @@
                 </div>
               </div>
     </section>
+
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Queste descrizioni richiamano sempre l'idea che questo materiale possa far realizzare altro.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
