--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -108,7 +108,7 @@
               <table class="table">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
+                    <th scope="col">Moment</th>
                     <th scope="col">German</th>
                     <th scope="col">English</th>
                   </tr>
