--- a/pages/learn/analisi_compositiva_stockhausen/06_telemusik_e_hymnen.html
+++ b/pages/learn/analisi_compositiva_stockhausen/06_telemusik_e_hymnen.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Telemusik e Hymnen</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisi Compositiva: Karheinz Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Telemusik e Hymnen</strong></h4>
             </div>
         </div>
     </div>
@@ -91,13 +91,150 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Tabella del materiale usato in Telemusik:
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
+
+    <!-- Table-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Country</th>
+                        <th scope="col">Genre</th>
+                        <th scope="col">Instrumentation/Environment</th>
+                        <th scope="col">Title</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Japan</td>
+                        <td>Gagaku court music</td>
+                        <td>Ryuteki (flute), hichiriki (reeds), sho (harmonium), drums, etc..</td>
+                        <td>"Etenraku"</td>
+                      </tr>
+                      <tr>
+                        <td>Japan</td>
+                        <td>Kabuki dance</td>
+                        <td>Matsuri Bayashi ensemble: plucked string, flute, perc</td>
+                        <td>"Yasai Aikata"</td>
+                      </tr><tr>
+                        <td>Japan</td>
+                        <td>Shinto dance</td>
+                        <td>Aoi Matsuri Festival</td>
+                        <td>"Daidai Kagura"</td>
+                      </tr><tr>
+                        <td>Japan</td>
+                        <td>Noh theater music</td>
+                        <td>percussion (ōtsuzumi) w., M/F vocal, flute</td>
+                        <td>"Hashi Benkei"</td>
+                      </tr><tr>
+                        <td>Japan</td>
+                        <td>Temple chant</td>
+                        <td>Buddhist temple chants Koyasan Temple</td>
+                        <td>"Senbotsusha Irei Heiwa Kigan Daihoyoh ceremony", "Shingon-Shu ceremony"</td>
+                      </tr><tr>
+                        <td>Japan</td>
+                        <td>Temple chant</td>
+                        <td>from gyōdō procession, circular walking chant w., wooden shoes, Yakushiji Temple</td>
+                        <td>"Jion-e"</td>
+                      </tr><tr>
+                        <td>Japan</td>
+                        <td></td>
+                        <td>Conch music Omizutori Festival, Nara field recordings</td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr><tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+    </section>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      <i>Telemusik</i> è un brano realizzato in Giappone e rilasciato originariamente a 5 piste. Ha una quantità
+                      di materiali musicali vastissima. Questo materiale così dozzinale rispetto alla varietà timbrica di
+                      Kontake da l'impressione di maggiore facilità.
+                      <br>
+                      <br>
+                      Quando si sente la RM essa si riconosce e questo già di per se crea un effetto anti-estraniante,
+                      complice un filtraggio ad altissime frequenze, rende tutti i materiali talmente etorogenei. Ci si
+                      chiede dunque perché tutta questa collezione di materiali.
+                      <br>
+                      <br>
+                      In <i>Hymnen</i> invece i materiali musicali degli inni sono veramente un pretesto.
+                      <br>
+                      <br>
+                      <i>Hymnen</i> e <i>Telemusik</i> sono gli unici esemplari di musica concreta di Stockhausen in cui non è stato
+                      in grado di valorizzare le differenze dei materiali, e li ha prostrati tutti al suo volere. È la spinta
+                      della <b>relatività progressiva</b> che aveva portato al concepimento della formula che viene a mancare.
+                      <br>
+                      <br>
+                      <i>Telemusik</i> e <i>Hymnen</i> segnano un momento di passaggio nell'estetica di Stockhausen (che sentiamo
+                      anche in <i>Stimmung</i>), in un sincretismo egotico: tutte le religioni del mondo, tutti gli inni del mondo,
+                      tutti i pezzi di Stockhausen.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
 
 <!-- Prev/Next-->
