--- a/pages/learn/analisi_compositiva_stockhausen/06_telemusik_e_hymnen.html
+++ b/pages/learn/analisi_compositiva_stockhausen/06_telemusik_e_hymnen.html
@@ -147,53 +147,53 @@
                         <td>"Jion-e"</td>
                       </tr><tr>
                         <td>Japan</td>
-                        <td></td>
-                        <td>Conch music Omizutori Festival, Nara field recordings</td>
-                        <td></td>
-                      </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Conch music</td>
+                        <td>Omizutori Festival, Nara field recordings</td>
                         <td></td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Bali</td>
+                        <td>Gamelan orchestra</td>
+                        <td>rhythmic metallic and wood percussion</td>
+                        <td>"Baris Bapan"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Vietman</td>
+                        <td>Music of the Montagnards</td>
+                        <td>female voice, bamboo flutes, gamelan-like</td>
+                        <td>"Song of the Festival of Love", "Concert of Bamboo Whistles", "Air de Gongs"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>China</td>
+                        <td>Peking opera</td>
+                        <td>Chinese flute and orchestra: flute, strings, fast percussion</td>
+                        <td>"Keihosau"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Spain</td>
+                        <td>Flamenco</td>
+                        <td>guitar, castanets, rattles, male singing</td>
+                        <td>"Sevillanas"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Hungary</td>
+                        <td>Hungarian folk song</td>
+                        <td>children's song for violin, fast rhythmic drum tom</td>
+                        <td>"Pista Bácsi, János Bácsi"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Africa</td>
+                        <td>South Saharan song</td>
+                        <td>kalimba-like percussion w., group singing</td>
+                        <td>"Ibani-Sansa"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Amazon South America</td>
+                        <td>Shipibo Indians song</td>
+                        <td>drums, ringing, blowpipes, girls exclamations</td>
+                        <td>"Dance for Adolescent Girls"</td>
                       </tr><tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Amazon South America</td>
+                        <td>Javahé Indians song</td>
+                        <td>girls, panflutes, rattles, perc.</td>
+                        <td>"Lullaby"</td>
+                      </tr><tr>
+                        <td>Amazon South America</td>
+                        <td>Suyá Indians song</td>
+                        <td>low men's choir w rattles</td>
                         <td></td>
                       </tr>
                     </tbody>
