--- a/pages/learn/analisi_compositiva_stockhausen/06_telemusik_e_hymnen.html
+++ b/pages/learn/analisi_compositiva_stockhausen/06_telemusik_e_hymnen.html
@@ -242,8 +242,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/05_01_relazione_mikrofonie_i.html">&lt; Previous</a>
+                    </div>
                     <br>
                     <br>
             </div>
