--- a/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
@@ -304,7 +304,7 @@
                       </tr>
                       <tr>
                         <th scope="row">32</th>
-                        <td>IS+B: whisper</td>
+                        <td>S+B: whisper</td>
                         <td>MOMENTE</td>
                       </tr>
                       <tr>
