--- a/pages/learn/analisi_compositiva_stockhausen/04_01_informazioni_tecniche.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_01_informazioni_tecniche.html
@@ -106,6 +106,7 @@
                   </ul>
                     <li>la seconda è esattamente uguale alla prima squadra
                       </ol>
+                      <p class="mbr-text mbr-fonts-style display-7">
                     La coppia di squadre suona in modo antifonico. Ovviamente il controllo preciso della frequenza del
                     filtro non è possibile e sono indicati i gesti. Abbiamo dunque più un movimento piuttosto che dei
                     valori ben precisi.
