--- a/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html
@@ -104,6 +104,7 @@
                       <li>basso 2</li>
                       <li>4 modulatori ad anello</li>
                     </ul>
+                    <p class="mbr-text mbr-fonts-style display-7">
                     L'idea di Stockhausen era quella di fare con le voci ciò che era stato fatto con il tam-tam,
                     surrogando la distorsione prodotta da un certo uso dei microfoni prodotta dalla modulazione ad
                     anello.
