--- a/pages/learn.html
+++ b/pages/learn.html
@@ -166,7 +166,7 @@
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
             </div>
