--- a/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
@@ -257,7 +257,7 @@
                                   <div class="col-md-12 col-lg-8">
                                     <h4>III. Forme polivalenti</h4>
                                       <p class="mbr-text mbr-fonts-style display-7">
-                            Le forme polivalenti sono forme che scaturiscono da processi come in <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_00_plus_minus.html"><i>Plus-Minus</i></a>, e qui vediamo realizzata quella differenza tra forme variabili e forme polivalenti, ovvero quella differenza che c'è tra forme aleatorie (Scambi di Poesseur o Plus-Minus di Stockhausen) e opere aperte. In forme variabili c'è un elemento di casualità, mentre le forme polivalenti si strutturano man mano che si procede con l'allestimento dell'opera ma con tutte forme prevedibili ed incluse nel materiale di base.
+                            Le forme polivalenti sono forme che scaturiscono da processi come in <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_00_plus_minus.html"><b>Plus-Minus</b></a>, e qui vediamo realizzata quella differenza tra forme variabili e forme polivalenti, ovvero quella differenza che c'è tra forme aleatorie (Scambi di Poesseur o Plus-Minus di Stockhausen) e opere aperte. In forme variabili c'è un elemento di casualità, mentre le forme polivalenti si strutturano man mano che si procede con l'allestimento dell'opera ma con tutte forme prevedibili ed incluse nel materiale di base.
                           </p>
                         </div>
                     </div>
