--- a/pages/learn.html
+++ b/pages/learn.html
@@ -114,6 +114,54 @@
     </div>
 </section>
 
+  <!-- List-->
+<section data-bs-version="5.1" class="content17 cid-sYzj9koTFS" id="content17-1j">
+    <div class="container">
+
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-10">
+                    <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingOne">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Composition</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div class="panel-body">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                      Obiettivo del laboratorio è fornire allo studente competenze di base che riguardano le tecnologie elettroacustiche e multimediali applicate alla musica. In particolare, gli studenti saranno coinvolti nella realizzazione di progetti compositivi e performativi che prevedono un utilizzo pratico delle specifiche tecniche acquisite. Inoltre il laboratorio intende offrire la possibilità di acquisire conoscenze di base nell'ambito della teoria musicale.
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingTwo">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div class="panel-body">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                      <strong>
+                                        <br>- <a href="https://cycling74.com/downloads" class="text-primary"><b>MaxMSP (software di sintesi)</b></a>
+                                        <br>- <a href="https://www.audacityteam.org/download/" class="text-primary"><b>Audacity (software di editing)</b></a>
+                                        <br>- <a href="https://www.sonicvisualiser.org/download.html" class="text-primary"><b>Sonic Visualizer (software di analisi)</b></a>
+                                      </strong>
+                                      </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
 
 <!-- Cards Grid-->
 <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
