--- a/pages/learn.html
+++ b/pages/learn.html
@@ -124,15 +124,50 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Composition</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
                             <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">
-                                      Obiettivo del laboratorio è fornire allo studente competenze di base che riguardano le tecnologie elettroacustiche e multimediali applicate alla musica. In particolare, gli studenti saranno coinvolti nella realizzazione di progetti compositivi e performativi che prevedono un utilizzo pratico delle specifiche tecniche acquisite. Inoltre il laboratorio intende offrire la possibilità di acquisire conoscenze di base nell'ambito della teoria musicale.
-                                </div>
+
+                                  <!-- Cards Grid-->
+                                  <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+                                      <div class="container">
+                                          <div class="row mt-4">
+                                              <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                                  <div class="item-wrapper">
+                                                      <div class="item-img">
+                                                          <img src="https://www.gabrielavelitch.com/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
+                                                      </div>
+                                                      <div class="item-content">
+                                                          <h5 class="item-title mbr-fonts-style display-7">
+                                                            <br><strong>Storia della Musica Elettroacustica</strong></h5>
+                                                      </div>
+                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                              &gt;</a></div>
+                                                  </div>
+                                              </div>
+                                              <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                                  <div class="item-wrapper">
+                                                      <div class="item-img">
+                                                          <img src="https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="1" data-bs-slide-to="1">
+                                                      </div>
+                                                      <div class="item-content">
+                                                          <h5 class="item-title mbr-fonts-style display-7">
+                                                            <br><strong>Il Paradigma di Stockhausen</strong></h5>
+                                                      </div>
+                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                              &gt;</a></div>
+                                                    </div>
+                                                </div>
+<!-- end Cards Grid-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                                    </section>
+
                             </div>
                         </div>
 
@@ -140,7 +175,7 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Composition</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
@@ -156,6 +191,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingTwo">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse3">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div class="panel-body">
+                                  <iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#list" style="width:100%; height:100%; border:0;"></iframe>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -205,7 +254,8 @@
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
-            </div><div class="item features-image сol-12 col-md-6 col-lg-3">
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
                         <img src="https://www.gabrielavelitch.com/img/site/analisi_stock.webp" data-slide-to="3" data-bs-slide-to="3">
@@ -218,6 +268,7 @@
                             &gt;</a></div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
