--- a/pages/learn.html
+++ b/pages/learn.html
@@ -170,7 +170,7 @@
 <!-- end Cards Grid-->
                             </div>
                         </div>
-
+                      </div>
 
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
