--- a/pages/learn.html
+++ b/pages/learn.html
@@ -181,16 +181,12 @@
                             </div>
                             <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">
-                                      <strong>
-                                        <br>- <a href="https://cycling74.com/downloads" class="text-primary"><b>MaxMSP (software di sintesi)</b></a>
-                                        <br>- <a href="https://www.audacityteam.org/download/" class="text-primary"><b>Audacity (software di editing)</b></a>
-                                        <br>- <a href="https://www.sonicvisualiser.org/download.html" class="text-primary"><b>Sonic Visualizer (software di analisi)</b></a>
-                                      </strong>
-                                      </p>
+
+
                                 </div>
                             </div>
                         </div>
+
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse3">
@@ -200,7 +196,43 @@
                             </div>
                             <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
-                                  <iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#list" style="width:100%; height:100%; border:0;"></iframe>
+                                  <!-- Cards Grid-->
+                                  <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+                                      <div class="container">
+                                          <div class="row mt-4">
+                                              <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                                  <div class="item-wrapper">
+                                                      <div class="item-img">
+                                                          <img src="https://www.gabrielavelitch.com/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
+                                                      </div>
+                                                      <div class="item-content">
+                                                          <h5 class="item-title mbr-fonts-style display-7">
+                                                            <br><strong>Storia della Musica Elettroacustica</strong></h5>
+                                                      </div>
+                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                              &gt;</a></div>
+                                                  </div>
+                                              </div>
+                                              <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                                  <div class="item-wrapper">
+                                                      <div class="item-img">
+                                                          <img src="https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="1" data-bs-slide-to="1">
+                                                      </div>
+                                                      <div class="item-content">
+                                                          <h5 class="item-title mbr-fonts-style display-7">
+                                                            <br><strong>Il Paradigma di Stockhausen</strong></h5>
+                                                      </div>
+                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                              &gt;</a></div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                                    </section>
+<!-- end Cards Grid-->
                                 </div>
                             </div>
                         </div>
