--- a/pages/learn.html
+++ b/pages/learn.html
@@ -136,18 +136,18 @@
                                       <div class="container">
                                           <div class="row mt-4">
                                               <div class="item features-image сol-12 col-md-6 col-lg-3">
-                                                  <div class="item-wrapper">
-                                                      <div class="item-img">
-                                                          <img src="https://www.gabrielavelitch.com/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
-                                                      </div>
-                                                      <div class="item-content">
-                                                          <h5 class="item-title mbr-fonts-style display-7">
-                                                            <br><strong>Storia della Musica Elettroacustica</strong></h5>
-                                                      </div>
-                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
-                                                              &gt;</a></div>
-                                                  </div>
-                                              </div>
+                                                    <div class="item-wrapper">
+                                                        <div class="item-img">
+                                                            <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="2" data-bs-slide-to="2">
+                                                        </div>
+                                                        <div class="item-content">
+                                                            <h5 class="item-title mbr-fonts-style display-7">
+                                                              <br><strong>Analisi Compositiva</strong></h5>
+                                                        </div>
+                                                        <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                                &gt;</a></div>
+                                                    </div>
+                                                </div>
                                               <div class="item features-image сol-12 col-md-6 col-lg-3">
                                                   <div class="item-wrapper">
                                                       <div class="item-img">
