--- a/pages/learn.html
+++ b/pages/learn.html
@@ -171,7 +171,21 @@
                             </div>
                         </div>
                       </div>
+                      
+                      <div class="container">
 
+                              <div class="row justify-content-center">
+                                  <div class="col-12 col-md-10">
+                                      <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
+                                          <div class="card mb-3">
+                                              <div class="card-header" role="tab" id="headingOne">
+                                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
+                                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                                  </a>
+                                              </div>
+                                              <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                                  <div class="panel-body">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
