--- a/pages/learn.html
+++ b/pages/learn.html
@@ -156,6 +156,7 @@
                               </div>
                           </div>
 
+<!-- end Cards Grid-->
 
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingTwo">
