--- a/pages/learn.html
+++ b/pages/learn.html
@@ -155,7 +155,7 @@
                                   </div>
                               </div>
                           </div>
-
+</div>
 <!-- end Cards Grid-->
 
                           <div class="card mb-3">
