--- a/pages/learn.html
+++ b/pages/learn.html
@@ -152,10 +152,11 @@
                                                   </div>
                                               </div>
 
-                                  </div>
-                              </div>
-                          </div>
-</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                                    </section>
 <!-- end Cards Grid-->
 
                           <div class="card mb-3">
