--- a/pages/learn.html
+++ b/pages/learn.html
@@ -151,7 +151,7 @@
                                                               &gt;</a></div>
                                                   </div>
                                               </div>
-
+<!-- new Cards Grid-->
                                             </div>
                                         </div>
                                     </div>
