--- a/pages/learn.html
+++ b/pages/learn.html
@@ -137,7 +137,7 @@
                                         <div class="container">
                                             <div class="row mt-4">
 
-
+<!-- new Cards-->
                                               <div class="item features-image сol-12 col-md-6 col-lg-3">
                                                   <div class="item-wrapper">
                                                       <div class="item-img">
@@ -151,7 +151,7 @@
                                                               &gt;</a></div>
                                                   </div>
                                               </div>
-<!-- new Cards Grid-->
+<!-- new Cards-->
                                             </div>
                                         </div>
                                     </div>
